--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="Style/style.css">
-   <!--<link rel="stylesheet" href="./Style/header.css">
+   <!--<link rel="stylesheet" href="Style/style.css">-->
+   <link rel="stylesheet" href="./Style/header.css">
    <link rel="stylesheet" href="./Style/awesome.css">
    <link rel="stylesheet" href="./Style/modern.css">
    <link rel="stylesheet" href="./Style/pricing.css">
    <link rel="stylesheet" href="./Style/social.css">
-   <link rel="stylesheet" href="./Style/tab.css">-->
+   <link rel="stylesheet" href="./Style/tab.css">
+   <link rel="stylesheet" href="./Style/contact.css">
+   <link rel="stylesheet" href="./Style/customers.css">
+   <link rel="stylesheet" href="./Style/footer.css">
+   <link rel="stylesheet" href="./Style/stylish.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Open+Sans:wght@600;700&family=Raleway:wght@400;500&display=swap" rel="stylesheet">
