--- a/index.html
+++ b/index.html
@@ -22,17 +22,19 @@
 </head>
 <body>
    <header>
-      <div class="container">
+      <div class="container"> 
+         <div class="header-container">    
             <nav class="navigation">
                <img src="./JPG/logo.png" alt="" class="logo">
                <div class="header-nav">
-                     <a href="" class="header-item">Features</a>
-                     <a href="" class="header-item">About</a>
-                     <a href="" class="header-item">Pricing</a>
-                     <a href="" class="header-item">Reviews</a>
-                     <a href="" class="header-item">Contact</a>
+                     <a href="#features" class="header-item">Features</a>
+                     <a href="#about" class="header-item">About</a>
+                     <a href="#pricing" class="header-item">Pricing</a>
+                     <a href="#reviews" class="header-item">Reviews</a>
+                     <a href="#contactus" class="header-item">Contact</a>
                </div>
             </nav>
+         </div> 
       </div>
    </header>
    <main>
@@ -49,11 +51,11 @@
                   <div class="modern__right">
                      <h4 class="modern_text-form">Try Your <span>free</span> Trial Today</h4>
                      <form action="" class="modern__form">
-                        <input type="text" class="modern__item" name="fname" value="Name">
-                        <input type="email" class="modern__item" name="lname" value="Email">
-                        <input type="text" class="modern__item" name="lname" value="Password">
-                     </form>
-                     <a class="btn_Started" href="">Get Started</a>
+                        <input type="text" class="modern__item" name="fname" placeholder="Name">
+                        <input type="email" class="modern__item" name="lname" placeholder="Email">
+                        <input type="text" class="modern__item" name="lname" placeholder="Password">
+                        <a class="btn_Started" href="">Get Started</a>
+                  </form>
                   </div>
                </div> 
             </div>
@@ -83,6 +85,7 @@
          </div>
       </section>
       <section class="tab">
+         <a name="features"></a>
          <div class="container">
             <div class="sup-container">
                <div class="tabs">
@@ -111,6 +114,7 @@
                      </div>
                   </div>
                   <div id="content-2">
+                  
                   Содержимое 2...
                   </div>
                   <div id="content-3">
@@ -121,6 +125,7 @@
          </div>  
       </section>
       <section class="awesome">
+         <a name="about"></a>
          <div class="container">
             <div class="sup-container">
                <div class="sup-container__text">
@@ -151,9 +156,10 @@
          </div>      
       </section>
       <section class="pricing">
+         <a name="pricing"></a>
          <div class="container pricing-color">
             <div class="sup-container">
-               <div class="sup-container__text">
+               <div class="sup-container__text id="p1">
                   <h2 class="awesome__title">Pricing options</h2>
                   <div class="awesome__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
                </div>
@@ -163,12 +169,12 @@
                      <h4 class="pricing-blok__title">Basic</h4>
                      <h3 class="pricing-blok__price">$10</h3>
                      <div class="price-blok__sup-title">Free for life</div>
-                     <div class="pricing-blok_spce">1 gb of space</div>
-                     <div class="pricing-blok_spce">1 gb of space</div>
-                     <div class="pricing-blok_spce">1 gb of space</div>
-                     <div class="pricing-blok_spce">1 gb of space</div>
-                     <div class="pricing-blok_spce">1 gb of space</div>
-                     <div class="pricing-blok_spce">1 gb of space</div>
+                     <div class="pricing-blok_spce"><a href="" class="pricing-blok_spce-link">1 gb of space</a></div>
+                     <div class="pricing-blok_spce"><a href="" class="pricing-blok_spce-link">1 gb of space</a></div>
+                     <div class="pricing-blok_spce"><a href="" class="pricing-blok_spce-link">1 gb of space</a></div>
+                     <div class="pricing-blok_spce"><a href="" class="pricing-blok_spce-link">1 gb of space</a></div>
+                     <div class="pricing-blok_spce"><a href="" class="pricing-blok_spce-link">1 gb of space</a></div>
+                     <div class="pricing-blok_spce"><a href="" class="pricing-blok_spce-link">1 gb of space</a></div>
                      </a>
                   </div>
                   <div class="pricing-blok__optima-active">
@@ -176,12 +182,12 @@
                      <h4 class="pricing-blok__title">Optima</h4>
                      <h3 class="pricing-blok__price">$20</h3>
                      <div class="price-blok__sup-title">Free for life</div>
-                     <div class="pricing-blok_spce">1 gb of space</div>
-                     <div class="pricing-blok_spce">1 gb of space</div>
-                     <div class="pricing-blok_spce">1 gb of space</div>
-                     <div class="pricing-blok_spce">1 gb of space</div>
-                     <div class="pricing-blok_spce">1 gb of space</div>
-                     <div class="pricing-blok_spce">1 gb of space</div>
+                     <div class="pricing-blok_spce"><a href="" class="pricing-blok_spce-link">1 gb of space</a></div>
+                     <div class="pricing-blok_spce"><a href="" class="pricing-blok_spce-link">1 gb of space</a></div>
+                     <div class="pricing-blok_spce"><a href="" class="pricing-blok_spce-link">1 gb of space</a></div>
+                     <div class="pricing-blok_spce"><a href="" class="pricing-blok_spce-link">1 gb of space</a></div>
+                     <div class="pricing-blok_spce"><a href="" class="pricing-blok_spce-link">1 gb of space</a></div>
+                     <div class="pricing-blok_spce"><a href="" class="pricing-blok_spce-link">1 gb of space</a></div>
                      </a>
                   </div>
                   <div class="pricing-blok__pro">
@@ -189,12 +195,12 @@
                      <h4 class="pricing-blok__title">Pro</h4>
                      <h3 class="pricing-blok__price">$30</h3>
                      <div class="price-blok__sup-title">Free for life</div>
-                     <div class="pricing-blok_spce">1 gb of space</div>
-                     <div class="pricing-blok_spce">1 gb of space</div>
-                     <div class="pricing-blok_spce">1 gb of space</div>
-                     <div class="pricing-blok_spce">1 gb of space</div>
-                     <div class="pricing-blok_spce">1 gb of space</div>
-                     <div class="pricing-blok_spce">1 gb of space</div>
+                     <div class="pricing-blok_spce"><a href="" class="pricing-blok_spce-link">1 gb of space</a></div>
+                     <div class="pricing-blok_spce"><a href="" class="pricing-blok_spce-link">1 gb of space</a></div>
+                     <div class="pricing-blok_spce"><a href="" class="pricing-blok_spce-link">1 gb of space</a></div>
+                     <div class="pricing-blok_spce"><a href="" class="pricing-blok_spce-link">1 gb of space</a></div>
+                     <div class="pricing-blok_spce"><a href="" class="pricing-blok_spce-link">1 gb of space</a></div>
+                     <div class="pricing-blok_spce"><a href="" class="pricing-blok_spce-link">1 gb of space</a></div>
                      </a>
                   </div>
                </div>
@@ -202,6 +208,7 @@
          </div>   
       </section>
       <section class="customers">
+         <a name="reviews"></a>
          <div class="container">
             <div class="sup-container">
                <div class="sup-container__text">
@@ -260,7 +267,6 @@
                </div>
             </div> 
          </div>
-
       </section>
       <section class="stylish">
          <div class="container back-stylish">
@@ -276,6 +282,7 @@
          </div>
       </section>
       <section class="contact">
+         <a name="contactus"></a>
          <div class="container">
             <div class="sup-container">
                <div class="sup-container__text">
@@ -285,20 +292,20 @@
                <div class="cotact-blok">
                   <div class="contact_form">
                      <form action="" class="contact__form">
-                        <input type="text" class="contact__item" name="fname" value="Name">
-                        <input type="email" class="contact__item" name="fname" value="Email">
-                        <input type="text" class="contact__item" name="fname" value="Password">
+                        <input type="text" class="contact__item" name="fname" placeholder="Name">
+                        <input type="email" class="contact__item" name="fname" placeholder="Email">
+                        <input type="text" class="contact__item" name="fname" placeholder="Password">
                      </form>
                   </div>
                   <div class="contact-text">
-                     <form action="" class="contact__form-text">
-                        <input type="text" class="contact__item-text" name="fname" value="Message">
-                     </form>
+                        <!--<input type="text" class="contact__item-text" name="fname" placeholder="Message">-->
+                        <textarea class="contact__item-text"  placeholder="Message" id="" cols="30" rows="10"></textarea>
                   </div>
                </div> 
                <div class="btn-contact">
                   <a href="#" class="contact-button">Send Massage</a>
                </div>
+            </form>
             </div>   
          </div>
       </section>    
