--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
    <!--<link rel="stylesheet" href="Style/style.css">-->
    <link rel="stylesheet" href="./Style/header.css">
    <link rel="stylesheet" href="./Style/awesome.css">
@@ -33,6 +33,7 @@
                      <a href="#reviews" class="header-item">Reviews</a>
                      <a href="#contactus" class="header-item">Contact</a>
                </div>
+               <a class="open"><img src="./JPG/Vector (4).png" class="icon-burger" alt=""></a>
             </nav>
          </div> 
       </div>
