--- a/index.html
+++ b/index.html
@@ -134,19 +134,19 @@
                   <div class="awesome__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
                </div>
                <div class="awesome__blok">
-                  <div class="awesome__blok-1">
+                  <div class="awesome__blok-text">
                      <a href="#" class="awesome__blok-icon"><img src="./JPG/Результат/Group 18 (1).png" alt=""></a>
                      <h4 class="awesome__blok-title">Thoughtful Design</h4>
                      <div class="awesome__block-text">Lorem ipsum dolor sit amet, consectetur adipiscing 
                         elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</div>
                   </div>
-                  <div class="awesome__blok-2">
+                  <div class="awesome__blok-text">
                      <a href="#" class="awesome__blok-icon"><img src="./JPG/Group 19.png" alt=""></a>
                      <h4 class="awesome__blok-title">Thoughtful Design</h4>
                      <div class="awesome__block-text">Lorem ipsum dolor sit amet, consectetur adipiscing 
                         elit. Aenean euismod bibendum laoreet. Proin gravida  dolor sit amet lacus accumsan et viverra.</div>
                   </div>
-                  <div class="awesome__blok-3">
+                  <div class="awesome__blok-text">
                      <a href="#" class="awesome__blok-icon"><img src="./JPG/Group 20.png" alt=""></a>
                      <h4 class="awesome__blok-title">Thoughtful Design</h4>
                      <div class="awesome__block-text">Lorem ipsum dolor sit amet, consectetur adipiscing 
@@ -217,7 +217,7 @@
                   <div class="awesome__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
                </div>
                <div class="customer-blok">
-                  <div class="customer-blok__item">
+                  <div class="customer-blok__item clean">
                      <div class="customer-blok__text">
                         <p class="customer-blok__text-1">Lorem ipsum dolor sit amet, 
                            consectetur adipisicing elit. Doloribus 
@@ -249,7 +249,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="customer-blok__item">
+                  <div class="customer-blok__item clean">
                      <div class="customer-blok__text">
                         <p class="customer-blok__text-1">Lorem ipsum dolor sit amet, 
                            consectetur adipisicing elit. Doloribus 
@@ -257,7 +257,7 @@
                            odio aspernatur ex, architecto eaque 
                            quo suscipit.</p>
                      </div>
-                     <div class="customer-blok__people">
+                     <div class="customer-blok__people ">
                         <img src="./JPG/Ellipse 7 (2).png" alt="" class="customer-blok__icon">
                         <div class="cistomer-blok__title">
                            <h4 class="customer-blok__title-1">Cooper Dorwart</h4>
@@ -300,7 +300,7 @@
                   </div>
                   <div class="contact-text">
                         <!--<input type="text" class="contact__item-text" name="fname" placeholder="Message">-->
-                        <textarea class="contact__item-text"  placeholder="Message" id="" cols="30" rows="10"></textarea>
+                        <textarea class="contact__item-text"  placeholder="Message" id="" cols="25" rows="10"></textarea>
                   </div>
                </div> 
                <div class="btn-contact">
